whenever sqlerror exit failure rollback

create table ref_business_unit (
  business_unit_id       number generated by default on null as identity,
  business_unit_code     varchar2(40 char),
  business_unit_name     varchar2(200 char),
  fusion_mapping_code    varchar2(100 char),
  active_flag            number(1),
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  updated_at             timestamp with time zone,
  updated_by             varchar2(255 char),
  constraint pk_ref_business_unit primary key (business_unit_id),
  constraint uk_ref_business_unit_code unique (business_unit_code)
);

create table ref_supplier_type (
  supplier_type_id       number generated by default on null as identity,
  supplier_type_code     varchar2(40 char),
  supplier_type_name     varchar2(200 char),
  tax_required_flag      number(1),
  active_flag            number(1),
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  updated_at             timestamp with time zone,
  updated_by             varchar2(255 char),
  constraint pk_ref_supplier_type primary key (supplier_type_id),
  constraint uk_ref_supplier_type_code unique (supplier_type_code)
);

create table ref_high_risk_country (
  country_code           varchar2(3 char),
  effective_from         date,
  country_name           varchar2(200 char),
  risk_level             varchar2(20 char),
  active_flag            number(1),
  effective_to           date,
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  updated_at             timestamp with time zone,
  updated_by             varchar2(255 char),
  constraint pk_ref_high_risk_country primary key (country_code, effective_from)
);

create table validation_rules (
  validation_rule_id     number generated by default on null as identity,
  rule_code              varchar2(40 char) not null,
  rule_name              varchar2(200 char) not null,
  rule_description       clob not null,
  field_name             varchar2(200 char),
  severity               varchar2(20 char) not null,
  default_message        clob not null,
  is_blocking            number(1) not null,
  active_flag            number(1) not null,
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  updated_at             timestamp with time zone,
  updated_by             varchar2(255 char),
  constraint pk_validation_rules primary key (validation_rule_id),
  constraint uk_validation_rules_code unique (rule_code)
);

create table ref_scoring_rule (
  rule_code              varchar2(60 char),
  version                varchar2(20 char),
  rule_type              varchar2(20 char) not null,
  rule_name              varchar2(200 char),
  weight                 number(8,2),
  severity               varchar2(20 char),
  critical_trigger_flag  number(1),
  active_flag            number(1),
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  updated_at             timestamp with time zone,
  updated_by             varchar2(255 char),
  constraint pk_ref_scoring_rule primary key (rule_type, rule_code, version)
);

create table supplier_request (
  request_id                 number generated by default on null as identity,
  request_number             varchar2(40 char) not null,
  status                     varchar2(40 char) not null,
  supplier_name              varchar2(300 char),
  supplier_type_code         varchar2(40 char),
  country_code               varchar2(3 char),
  business_unit_id           number,
  requester_user             varchar2(255 char),
  business_justification     clob,
  product_service_category   varchar2(200 char),
  expected_annual_spend      number(18,2),
  tax_registration_number    varchar2(100 char),
  fusion_supplier_id         varchar2(100 char),
  fusion_supplier_number     varchar2(100 char),
  fusion_created_at          timestamp with time zone,
  fusion_response_ref        varchar2(500 char),
  created_at                 timestamp with time zone,
  submitted_at               timestamp with time zone,
  last_updated_at            timestamp with time zone,
  constraint pk_supplier_request primary key (request_id),
  constraint uk_supplier_request_number unique (request_number)
);

create table supplier_request_site (
  site_id                    number generated by default on null as identity,
  request_id                 number not null,
  site_name                  varchar2(200 char),
  country_code               varchar2(3 char),
  address_line1              varchar2(20 char),
  address_line2              varchar2(20 char),
  city                       varchar2(100 char),
  region                     varchar2(100 char),
  postal_code                varchar2(30 char),
  intended_business_unit_id  number,
  is_primary                 number(1),
  constraint pk_supplier_request_site primary key (site_id)
);

create table supplier_request_contact (
  contact_id             number generated by default on null as identity,
  request_id             number not null,
  contact_name           varchar2(200 char),
  contact_email          varchar2(320 char),
  phone_number           varchar2(60 char),
  email_domain           varchar2(255 char),
  constraint pk_supplier_request_contact primary key (contact_id)
);

create table supplier_request_bank (
  bank_id                 number generated by default on null as identity,
  request_id              number not null,
  bank_country_code       varchar2(3 char),
  masked_account_display  varchar2(80 char),
  account_last4           varchar2(4 char),
  account_hash            varchar2(128 char),
  bank_provided_flag      number(1),
  constraint pk_supplier_request_bank primary key (bank_id)
);

create table supplier_request_document (
  document_id            number generated by default on null as identity,
  request_id             number not null,
  document_type          varchar2(60 char),
  document_status        varchar2(40 char),
  is_required            number(1),
  metadata_json          json,
  missing_flag           number(1),
  constraint pk_supplier_request_document primary key (document_id)
);

create table status_history (
  history_id             number generated by default on null as identity,
  request_id             number not null,
  from_status            varchar2(40 char),
  to_status              varchar2(40 char),
  action_code            varchar2(60 char),
  actor_user             varchar2(255 char),
  action_comment         clob,
  action_timestamp       timestamp with time zone,
  constraint pk_status_history primary key (history_id)
);

create table validation_result (
  validation_id          number generated by default on null as identity,
  request_id             number not null,
  validation_rule_id     number not null,
  run_id                 varchar2(64 char),
  is_current             number(1),
  field_name             varchar2(200 char),
  severity               varchar2(20 char),
  message                clob,
  is_blocking            number(1),
  created_at             timestamp with time zone,
  constraint pk_validation_result primary key (validation_id)
);

create table existing_supplier_ref (
  supplier_ref_id          number generated by default on null as identity,
  fusion_supplier_id       varchar2(100 char),
  supplier_number          varchar2(100 char),
  supplier_name            varchar2(300 char),
  normalized_name          varchar2(300 char),
  country_code             varchar2(3 char),
  tax_registration_number  varchar2(100 char),
  email_domain             varchar2(255 char),
  phone_normalized         varchar2(80 char),
  address_normalized       varchar2(1000 char),
  bank_account_hash        varchar2(128 char),
  last_sync_at             timestamp with time zone,
  constraint pk_existing_supplier_ref primary key (supplier_ref_id),
  constraint uk_existing_supplier_number unique (supplier_number)
);

create table existing_supplier_site_ref (
  site_ref_id             number generated by default on null as identity,
  supplier_ref_id         number not null,
  fusion_site_id          varchar2(100 char),
  site_name               varchar2(200 char),
  country_code            varchar2(3 char),
  address_normalized      varchar2(1000 char),
  business_unit_code      varchar2(40 char),
  constraint pk_existing_supplier_site_ref primary key (site_ref_id)
);

create table duplicate_match (
  match_id                    number generated by default on null as identity,
  request_id                  number not null,
  run_id                      varchar2(64 char),
  is_current                  number(1),
  candidate_source            varchar2(30 char),
  candidate_supplier_ref_id   number,
  candidate_supplier_number   varchar2(100 char),
  candidate_supplier_name     varchar2(300 char),
  candidate_request_id        number,
  match_score                 number(5,2),
  match_level                 varchar2(20 char),
  matched_fields_json         json,
  explanation                 clob,
  created_at                  timestamp with time zone,
  constraint pk_duplicate_match primary key (match_id)
);

create table risk_assessment (
  risk_id                 number generated by default on null as identity,
  request_id              number not null,
  run_id                 varchar2(64 char),
  is_current             number(1),
  risk_score             number(5,2),
  risk_level             varchar2(20 char),
  scoring_version        varchar2(20 char),
  risk_reasons_json      json,
  created_at             timestamp with time zone,
  constraint pk_risk_assessment primary key (risk_id)
);

create table ai_summary (
  summary_id             number generated by default on null as identity,
  request_id             number not null,
  prompt_version         varchar2(40 char),
  provider_name          varchar2(100 char),
  model_name             varchar2(100 char),
  summary_json           json,
  source_facts_hash      varchar2(128 char),
  created_at             timestamp with time zone,
  created_by             varchar2(255 char),
  constraint pk_ai_summary primary key (summary_id)
);

create table integration_log (
  log_id                  number generated by default on null as identity,
  request_id              number not null,
  integration_name        varchar2(100 char),
  oic_instance_id         varchar2(100 char),
  direction               varchar2(20 char),
  status                  varchar2(40 char),
  error_category          varchar2(40 char),
  payload_ref             varchar2(500 char),
  response_ref            varchar2(500 char),
  user_message            clob,
  technical_message       clob,
  retry_count             number,
  retry_eligible_flag     number(1),
  last_retry_at           timestamp with time zone,
  last_retry_by           varchar2(255 char),
  retry_history_json      json not null,
  created_at              timestamp with time zone,
  constraint pk_integration_log primary key (log_id)
);
